itemPage additions, edit item added, delete item added

--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/admin/adminAddItem.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/admin/adminAddItem.css
@@ -147,7 +147,7 @@
 			      	
 		       }
 		      
-			      #itemName, #categoryName, #itemPrice {
+			      #itemName, #categoryN, #itemPrice {
 			      	width: 100%;
 			      	display: flex;
 			      	flex-direction: row;
