--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/admin/adminShowAllItemsDelete.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/admin/adminShowAllItemsDelete.css
@@ -141,7 +141,7 @@
 				
 				background-color: rgb(128, 191, 255);
 		      }
-		      	#categoryName {
+		      	#category {
 		      		display: flex;
 		      		justify-content: center;
 		      		margin-bottom: 10px;
