--- a/pizza-ordedring-app/src/main/resources/templates/admin/adminOptionsPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/admin/adminOptionsPage.html
@@ -22,6 +22,9 @@
 		    <p th:each="category : ${itemCategories}" th:id="'categoryName' + ${category}" th:text="${category}"></p>
 		</div>
    		<!-- TopHeader div inserted here from JavaScript (topHeaderHtml.js) -->
+		<div hidden>
+		    <p th:each="item : ${menuItems}" th:id="'itemName' + ${item.getItemName()}" th:text="${item.getCategory()} + ' ' + ${item.getItemName()}"></p>
+		</div>
 		
    		<div id="pageBody">
    			<div id="body-headers">
