--- a/pizza-ordedring-app/src/main/resources/templates/itemPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/itemPage.html
@@ -50,7 +50,7 @@
    				</div>
    				<div id="itemDescDiv">
    					<div id="itemName">
-   						[[${item.getItemName()}]] $[[${item.getItemDefaultCost()}]]
+   						[[${item.getItemName()}]] <span id="itemCost">$[[${item.getItemDefaultCostAsString()}]]</span>
    					</div>
    					<div id="itemDesc">
    						[[${item.getItemDesc()}]]
@@ -59,7 +59,7 @@
    			</div>
    			<div id="mainOptions">
    			
-   				<!-- Thymleaf variables to be inserted into mainOptions -->
+   				<!-- Thymleaf variables to be inserted into mainOptions and add-ons_Extra-->
    				<div th:each="topping : ${item.getIncludedToppings()}" id="hiddenIncludedToppings" hidden>
 				    
 					    <p id="toppingName" th:text="${topping.getToppingName()}"></p>
@@ -86,59 +86,20 @@
    			
    			<div id="add-ons_Extra">
    			
-	   				
-	   				
-	   				
-	   				<div id="addonOptions-dropdownContainer">
-	   					<label id="dropdownLabelName">Sauce Type: </label>
-		   				<div class="dropdown">
-						  	<div id="selectedOption">Select</div>
-						  	<ul class="dropdown-menu">
-							    <li><a href="#">Red Sauce</a></li>
-							    <li><a href="#">Spicy Sauce</a></li>
-							    <li><a href="#">Tomato Sauce</a></li>
-							    <li><a href="#">Light Sauce</a></li>
-							</ul>
-						</div>
-						<div id="amountDiv">
-			   					<div id="light"> <span id="lightText">Light</span> </div>
-			   					<div id="normal"> <span id="normalText">Normal</span> </div>
-			   					<div id="extra"> <span id="extraText">Extra</span> </div>
-			   			 </div>
-			   			 <div id="toppPricesHidden" style="display:none"> <span id="hiddenAddonPrice">1.00</span> <span id="hiddenExtraPrice">0.50</span> </div>
-			   			 <div id="toppPriceDiv" class="dropdownToppPrice"> <span id="toppPriceText">$1.00</span> </div>
-			   			 <div id="removeIngredient" class="dropdownAddonRemove"> <span id="removeIngredientText">Remove</span> </div>
-					</div>
-   				
-	   				
-	   				
-	   				<div id="lightNormalExtra">
-	   				
-	   					<div id="ingredientName">Lettuce: </div>
-	   					
-	   					<div id="amountDiv">
-		   					<div id="light"> <span id="lightText">Light</span> </div>
-		   					<div id="normal"> <span id="normalText">Normal</span> </div>
-		   					<div id="extra"> <span id="extraText">Extra</span> </div>
-		   				</div>
-	   					
-	   					<div id="sideOfPizzaDiv">
-		   					<div id="leftSide"><span id="leftSideText"></span></div>
-		   					<div id="wholeSide"><span id="wholeSideText"></span></div>
-		   					<div id="rightSide"><span id="rightSideText"></span></div>
-		   				</div>
-	   					<div id="toppPricesHidden" style="display:none"> <span id="addonPrice">1.00</span> <span id="extraPrice">0.50</span> </div>
-	   					<div id="toppPriceDiv" > <span id="toppPriceText">$1.00</span> </div>
-	   					<div id="removeIngredient"> <span id="removeIngredientText">Remove</span> </div>
-	   					
-	   				</div>
+   			
    				
    			</div>
-   			<div id="userComments">
-   				<textarea id="additionalInstructions" name="additionalInstructions"
-   				 placeholder="Additional Instructions..."  rows="5" cols="50" maxlength="250"></textarea>
-    			 <div id="countDisplay">0/250</div>
-   			</div>
+   			<div id=commentsAndSubmit>
+	   			<div id="userComments">
+	   				<textarea id="additionalInstructions" name="additionalInstructions"
+	   				 placeholder="Additional Instructions..."  rows="5" cols="50" maxlength="250"></textarea>
+	    			 <div id="countDisplay">0/250</div>
+	   			</div>
+	   			<div id="addItemDiv">
+	   				<span id="addItem">Add</span>
+	   			</div>
+	   		</div>
+	   	
    		</div>
    		
    		<div id="socialLinksBorder">
