--- a/pizza-ordedring-app/src/main/resources/templates/sign-upPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/sign-upPage.html
@@ -21,8 +21,13 @@
    		<div hidden >
 		    <p th:each="category : ${itemCategories}" th:id="'categoryName' + ${category}" th:text="${category}"></p>
 		</div>
+   		<!-- Listing item names to pass to JavaScript. -->
+		<div hidden>
+		    <p th:each="item : ${menuItems}" th:id="'itemName' + ${item.getItemName()}" th:text="${item.getCategory()} + ' ' + ${item.getItemName()}"></p>
+		</div>
    		<!-- TopHeader div inserted here from JavaScript (topHeaderHtml.js) -->
-		
+   		
+   		
    		<div id="pageBody">
    			<div id="body-headers">
    				<div id="storeLocation"> 156 Elderwood Ave </div>
